Fix text area width on mobile conpherence
Summary: I collapsed this into the incorrect rule

Test Plan: Test tablet and mobile breakpoints

Reviewers: btrahan, epriestley

Reviewed By: epriestley

Subscribers: Korvin, epriestley

Differential Revision: https://secure.phabricator.com/D12437

--- a/webroot/rsrc/css/application/conpherence/message-pane.css
+++ b/webroot/rsrc/css/application/conpherence/message-pane.css
@@ -329,4 +329,5 @@
 .device .conpherence-message-pane .aphront-form-control-textarea {
   float: left;
   height: 24px;
+  width: 100%;
 }
